-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 12.0.0-rc1
-
None
-
-
d41f15390 (master)
I am attaching an example video. If I comment the neighboring method, then it's ok.
This bug appears only if Clang-Format option (plugin) is on, and no matter which clang format settings I'm use, even with Qt (built-in).
- is duplicated by
-
QTCREATORBUG-30814 Weird automatic indentation while typing
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTCREATORBUG-29911 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 562929,12 | ClangFormat: Fix indentation after closing parenthesis | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |