ClangFormat: Fix indentation after closing parenthesis

Indentation was incorrect when closing parenthesis
 was typed in the function and empty function is below.
Now it indents as expected, test case was added.

Fixes: QTCREATORBUG-29911
Change-Id: Ic1ccf8cecb0d5723e6ab1a77177d8161119f6a54
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>